--- a/src_assets/common/assets/web/config.html
+++ b/src_assets/common/assets/web/config.html
@@ -327,6 +327,7 @@
             id: "vaapi",
             name: "VA-API Encoder",
             options: {
+              "vaapi_async_depth": "1",    
               "vaapi_strict_rc_buffer": "disabled",
             },
           },
